@@ -1,5 +1,9 @@
 package com.linkedin.metadata.resources.operations;
 
+import static com.linkedin.metadata.Constants.*;
+import static com.linkedin.metadata.resources.restli.RestliConstants.*;
+import static com.linkedin.metadata.resources.restli.RestliUtils.*;
+
 import com.codahale.metrics.MetricRegistry;
 import com.datahub.authentication.Authentication;
 import com.datahub.authentication.AuthenticationContext;
@@ -35,17 +39,10 @@ import javax.annotation.Nullable;
 import javax.inject.Inject;
 import javax.inject.Named;
 import lombok.extern.slf4j.Slf4j;
-import org.opensearch.client.tasks.GetTaskResponse;
 import org.json.JSONObject;
+import org.opensearch.client.tasks.GetTaskResponse;
 
-import static com.linkedin.metadata.Constants.*;
-import static com.linkedin.metadata.resources.restli.RestliConstants.*;
-import static com.linkedin.metadata.resources.restli.RestliUtils.*;
-
-
-/**
- * Endpoints for performing maintenance operations
- */
+/** Endpoints for performing maintenance operations */
 @Slf4j
 @RestLiCollection(name = "operations", namespace = "com.linkedin.operations")
 public class OperationsResource extends CollectionResourceTaskTemplate<String, VersionedAspect> {
@@ -67,9 +64,11 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
   @Inject
   @Named("entityService")
   private EntityService _entityService;
+
   @Inject
   @Named("timeseriesAspectService")
   private TimeseriesAspectService _timeseriesAspectService;
+
   @Inject
   @Named("elasticSearchSystemMetadataService")
   private SystemMetadataService _systemMetadataService;
@@ -78,7 +77,7 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
   @Named("authorizerChain")
   private Authorizer _authorizer;
 
-  public OperationsResource() { }
+  public OperationsResource() {}
 
   @VisibleForTesting
   OperationsResource(TimeseriesAspectService timeseriesAspectService) {
@@ -88,15 +87,18 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
   @Action(name = ACTION_RESTORE_INDICES)
   @Nonnull
   @WithSpan
-  public Task<String> restoreIndices(@ActionParam(PARAM_ASPECT) @Optional @Nonnull String aspectName,
+  public Task<String> restoreIndices(
+      @ActionParam(PARAM_ASPECT) @Optional @Nonnull String aspectName,
       @ActionParam(PARAM_URN) @Optional @Nullable String urn,
       @ActionParam(PARAM_URN_LIKE) @Optional @Nullable String urnLike,
       @ActionParam("start") @Optional @Nullable Integer start,
-      @ActionParam("batchSize") @Optional @Nullable Integer batchSize
-  ) {
-    return RestliUtil.toTask(() -> {
-      return Utils.restoreIndices(aspectName, urn, urnLike, start, batchSize, _authorizer, _entityService);
-    }, MetricRegistry.name(this.getClass(), "restoreIndices"));
+      @ActionParam("batchSize") @Optional @Nullable Integer batchSize) {
+    return RestliUtil.toTask(
+        () -> {
+          return Utils.restoreIndices(
+              aspectName, urn, urnLike, start, batchSize, _authorizer, _entityService);
+        },
+        MetricRegistry.name(this.getClass(), "restoreIndices"));
   }
 
   @VisibleForTesting
@@ -117,62 +119,86 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
   public Task<String> getTaskStatus(
       @ActionParam(PARAM_NODE_ID) @Optional String nodeId,
       @ActionParam(PARAM_TASK_ID) @Optional("0") long taskId,
-      @ActionParam(PARAM_TASK) @Optional String task
-  ) {
-    return RestliUtil.toTask(() -> {
-      Authentication authentication = AuthenticationContext.getAuthentication();
-      if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-          && !isAuthorized(authentication, _authorizer, ImmutableList.of(PoliciesConfig.GET_ES_TASK_STATUS_PRIVILEGE),
-          List.of(java.util.Optional.empty()))) {
-        throw new RestLiServiceException(HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get ES task status");
-      }
-      boolean taskSpecified = task != null;
-      boolean nodeAndTaskIdSpecified = nodeId != null && taskId > 0;
-      if (!taskSpecified && !nodeAndTaskIdSpecified) {
-        throw new RestLiServiceException(HttpStatus.S_400_BAD_REQUEST, "Please specify either Node ID + task ID OR composite task parameters");
-      }
+      @ActionParam(PARAM_TASK) @Optional String task) {
+    return RestliUtil.toTask(
+        () -> {
+          Authentication authentication = AuthenticationContext.getAuthentication();
+          if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
+              && !isAuthorized(
+                  authentication,
+                  _authorizer,
+                  ImmutableList.of(PoliciesConfig.GET_ES_TASK_STATUS_PRIVILEGE),
+                  List.of(java.util.Optional.empty()))) {
+            throw new RestLiServiceException(
+                HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get ES task status");
+          }
+          boolean taskSpecified = task != null;
+          boolean nodeAndTaskIdSpecified = nodeId != null && taskId > 0;
+          if (!taskSpecified && !nodeAndTaskIdSpecified) {
+            throw new RestLiServiceException(
+                HttpStatus.S_400_BAD_REQUEST,
+                "Please specify either Node ID + task ID OR composite task parameters");
+          }
 
-      if (taskSpecified && nodeAndTaskIdSpecified && !task.equals(String.format("%s:%d", nodeId, taskId))) {
-        throw new RestLiServiceException(HttpStatus.S_400_BAD_REQUEST, "Please specify only one of Node ID + task ID OR composite task parameters");
-      }
+          if (taskSpecified
+              && nodeAndTaskIdSpecified
+              && !task.equals(String.format("%s:%d", nodeId, taskId))) {
+            throw new RestLiServiceException(
+                HttpStatus.S_400_BAD_REQUEST,
+                "Please specify only one of Node ID + task ID OR composite task parameters");
+          }
 
-      if (taskSpecified && !isTaskIdValid(task)) {
-        throw new RestLiServiceException(HttpStatus.S_400_BAD_REQUEST,
-            String.format("Task should be in the form nodeId:taskId e.g. aB1cdEf2GHIJKLMnoPQr3S:123456 (got %s)", task));
-      }
+          if (taskSpecified && !isTaskIdValid(task)) {
+            throw new RestLiServiceException(
+                HttpStatus.S_400_BAD_REQUEST,
+                String.format(
+                    "Task should be in the form nodeId:taskId e.g. aB1cdEf2GHIJKLMnoPQr3S:123456 (got %s)",
+                    task));
+          }
 
-      String nodeIdToQuery = nodeAndTaskIdSpecified ? nodeId : task.split(":")[0];
-      long taskIdToQuery = nodeAndTaskIdSpecified ? taskId : Long.parseLong(task.split(":")[1]);
-      java.util.Optional<GetTaskResponse> res = _systemMetadataService.getTaskStatus(nodeIdToQuery, taskIdToQuery);
-      JSONObject j = new JSONObject();
-      if (res.isEmpty()) {
-        j.put("error", String.format("Could not get task status for %s:%d", nodeIdToQuery, taskIdToQuery));
-        return j.toString();
-      }
-      GetTaskResponse resp = res.get();
-      j.put("completed", resp.isCompleted());
-      j.put("taskId", res.get().getTaskInfo().getTaskId());
-      j.put("status", res.get().getTaskInfo().getStatus());
-      j.put("runTimeNanos", res.get().getTaskInfo().getRunningTimeNanos());
-      return j.toString();
-    }, MetricRegistry.name(this.getClass(), "getTaskStatus"));
+          String nodeIdToQuery = nodeAndTaskIdSpecified ? nodeId : task.split(":")[0];
+          long taskIdToQuery = nodeAndTaskIdSpecified ? taskId : Long.parseLong(task.split(":")[1]);
+          java.util.Optional<GetTaskResponse> res =
+              _systemMetadataService.getTaskStatus(nodeIdToQuery, taskIdToQuery);
+          JSONObject j = new JSONObject();
+          if (res.isEmpty()) {
+            j.put(
+                "error",
+                String.format("Could not get task status for %s:%d", nodeIdToQuery, taskIdToQuery));
+            return j.toString();
+          }
+          GetTaskResponse resp = res.get();
+          j.put("completed", resp.isCompleted());
+          j.put("taskId", res.get().getTaskInfo().getTaskId());
+          j.put("status", res.get().getTaskInfo().getStatus());
+          j.put("runTimeNanos", res.get().getTaskInfo().getRunningTimeNanos());
+          return j.toString();
+        },
+        MetricRegistry.name(this.getClass(), "getTaskStatus"));
   }
 
   @Action(name = ACTION_GET_INDEX_SIZES)
   @Nonnull
   @WithSpan
   public Task<TimeseriesIndicesSizesResult> getIndexSizes() {
-    return RestliUtil.toTask(() -> {
-      Authentication authentication = AuthenticationContext.getAuthentication();
-      if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-          && !isAuthorized(authentication, _authorizer, ImmutableList.of(PoliciesConfig.GET_TIMESERIES_INDEX_SIZES_PRIVILEGE),
-          List.of(java.util.Optional.empty()))) {
-        throw new RestLiServiceException(HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get index sizes.");
-      }
-      TimeseriesIndicesSizesResult result = new TimeseriesIndicesSizesResult();
-      result.setIndexSizes(new TimeseriesIndexSizeResultArray(_timeseriesAspectService.getIndexSizes()));
-      return result;
-    }, MetricRegistry.name(this.getClass(), "getIndexSizes"));
+    return RestliUtil.toTask(
+        () -> {
+          Authentication authentication = AuthenticationContext.getAuthentication();
+          if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
+              && !isAuthorized(
+                  authentication,
+                  _authorizer,
+                  ImmutableList.of(PoliciesConfig.GET_TIMESERIES_INDEX_SIZES_PRIVILEGE),
+                  List.of(java.util.Optional.empty()))) {
+            throw new RestLiServiceException(
+                HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get index sizes.");
+          }
+          TimeseriesIndicesSizesResult result = new TimeseriesIndicesSizesResult();
+          result.setIndexSizes(
+              new TimeseriesIndexSizeResultArray(_timeseriesAspectService.getIndexSizes()));
+          return result;
+        },
+        MetricRegistry.name(this.getClass(), "getIndexSizes"));
   }
 
   @VisibleForTesting
@@ -184,13 +210,16 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
       @Nullable Integer batchSize,
       @Nullable Long timeoutSeconds,
       @Nullable Boolean forceDeleteByQuery,
-      @Nullable Boolean forceReindex
-  ) {
+      @Nullable Boolean forceReindex) {
     Authentication authentication = AuthenticationContext.getAuthentication();
     if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(authentication, _authorizer, ImmutableList.of(PoliciesConfig.TRUNCATE_TIMESERIES_INDEX_PRIVILEGE),
-        List.of(java.util.Optional.empty()))) {
-      throw new RestLiServiceException(HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to truncate timeseries index");
+        && !isAuthorized(
+            authentication,
+            _authorizer,
+            ImmutableList.of(PoliciesConfig.TRUNCATE_TIMESERIES_INDEX_PRIVILEGE),
+            List.of(java.util.Optional.empty()))) {
+      throw new RestLiServiceException(
+          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to truncate timeseries index");
     }
 
     if (forceDeleteByQuery != null && forceDeleteByQuery.equals(forceReindex)) {
@@ -199,14 +228,20 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
 
     List<Criterion> criteria = new ArrayList<>();
     criteria.add(
-        QueryUtils.newCriterion("timestampMillis", String.valueOf(endTimeMillis), Condition.LESS_THAN_OR_EQUAL_TO));
+        QueryUtils.newCriterion(
+            "timestampMillis", String.valueOf(endTimeMillis), Condition.LESS_THAN_OR_EQUAL_TO));
 
     final Filter filter = QueryUtils.getFilterFromCriteria(criteria);
     long numToDelete = _timeseriesAspectService.countByFilter(entityType, aspectName, filter);
     long totalNum = _timeseriesAspectService.countByFilter(entityType, aspectName, new Filter());
 
-    String deleteSummary = String.format("Delete %d out of %d rows (%.2f%%). ", numToDelete, totalNum, ((double) numToDelete) / totalNum * 100);
-    boolean reindex = !(forceDeleteByQuery != null && forceDeleteByQuery) && ((forceReindex != null && forceReindex) ||  numToDelete > (totalNum / 2));
+    String deleteSummary =
+        String.format(
+            "Delete %d out of %d rows (%.2f%%). ",
+            numToDelete, totalNum, ((double) numToDelete) / totalNum * 100);
+    boolean reindex =
+        !(forceDeleteByQuery != null && forceDeleteByQuery)
+            && ((forceReindex != null && forceReindex) || numToDelete > (totalNum / 2));
 
     if (reindex) {
       deleteSummary += "Reindexing the aspect without the deleted records. ";
@@ -232,17 +267,22 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
       }
 
       if (reindex) {
-        // need to invert query to retain only the ones that do NOT meet the criterion from the count
+        // need to invert query to retain only the ones that do NOT meet the criterion from the
+        // count
         List<Criterion> reindexCriteria = new ArrayList<>();
         reindexCriteria.add(
-            QueryUtils.newCriterion("timestampMillis", String.valueOf(endTimeMillis), Condition.GREATER_THAN));
+            QueryUtils.newCriterion(
+                "timestampMillis", String.valueOf(endTimeMillis), Condition.GREATER_THAN));
 
         final Filter reindexFilter = QueryUtils.getFilterFromCriteria(reindexCriteria);
-        String taskId = _timeseriesAspectService.reindexAsync(entityType, aspectName, reindexFilter, options);
+        String taskId =
+            _timeseriesAspectService.reindexAsync(entityType, aspectName, reindexFilter, options);
         log.info("reindex request submitted with ID " + taskId);
         return taskId;
       } else {
-        String taskId = _timeseriesAspectService.deleteAspectValuesAsync(entityType, aspectName, filter, options);
+        String taskId =
+            _timeseriesAspectService.deleteAspectValuesAsync(
+                entityType, aspectName, filter, options);
         log.info("delete by query request submitted with ID " + taskId);
         return taskId;
       }
@@ -260,10 +300,18 @@ public class OperationsResource extends CollectionResourceTaskTemplate<String, V
       @ActionParam(PARAM_BATCH_SIZE) @Optional @Nullable Integer batchSize,
       @ActionParam(PARAM_TIMEOUT_SECONDS) @Optional @Nullable Long timeoutSeconds,
       @ActionParam(PARAM_FORCE_DELETE_BY_QUERY) @Optional @Nullable Boolean forceDeleteByQuery,
-      @ActionParam(PARAM_FORCE_REINDEX) @Optional @Nullable Boolean forceReindex
-  ) {
-    return RestliUtil.toTask(() ->
-        executeTruncateTimeseriesAspect(entityType, aspectName, endTimeMillis, dryRun, batchSize, timeoutSeconds, forceDeleteByQuery, forceReindex),
+      @ActionParam(PARAM_FORCE_REINDEX) @Optional @Nullable Boolean forceReindex) {
+    return RestliUtil.toTask(
+        () ->
+            executeTruncateTimeseriesAspect(
+                entityType,
+                aspectName,
+                endTimeMillis,
+                dryRun,
+                batchSize,
+                timeoutSeconds,
+                forceDeleteByQuery,
+                forceReindex),
         MetricRegistry.name(this.getClass(), "truncateTimeseriesAspect"));
   }
 }
